--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-// index file
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="refresh" content="0; URL=login.html" />
+  <title>Redirecting...</title>
+</head>
+<body>
+  Redirecting to login...
+</body>
+</html>
+
