--- a/login.html
+++ b/login.html
@@ -1,1 +1,23 @@
 <!-- login html -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Login</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/amazon-cognito-identity-js@6.2.0/dist/amazon-cognito-identity.min.js"></script>
+</head>
+<body>
+  <h2>Login</h2>
+  <input id="email" type="email" placeholder="Email"><br><br>
+  <input id="password" type="password" placeholder="Password"><br><br>
+  <button onclick="login()">Login</button>
+  <p id="message"></p>
+
+  <div id="newPasswordForm" style="display:none;">
+    <input id="newPassword" type="password" placeholder="New Password"><br><br>
+    <button onclick="submitNewPassword()">Submit New Password</button>
+  </div>
+
+  <script src="js/login.js"></script>
+</body>
+</html>
