--- a/owner.html
+++ b/owner.html
@@ -1,1 +1,14 @@
 <!-- owner html -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Owner Dashboard</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h2>Welcome Owner</h2>
+  <p>You can upload job Excel files and manage all jobs here.</p>
+  <button onclick="logout()">Logout</button>
+  <script src="js/owner.js"></script>
+</body>
+</html>
