--- a/driver.html
+++ b/driver.html
@@ -1,1 +1,14 @@
 <!-- driver html -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Driver Dashboard</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h2>Welcome Driver</h2>
+  <p>These are the jobs assigned to you.</p>
+  <button onclick="logout()">Logout</button>
+  <script src="js/driver.js"></script>
+</body>
+</html>
