--- a/owner.html
+++ b/owner.html
@@ -3,5 +3,8 @@
 <input type="file" id="excelFile" accept=".xlsx,.xls">
 <button onclick="uploadExcel()">Upload Excel</button>
 <p id="uploadStatus"></p>
+<h2>Unassigned Jobs</h2>
+<button onclick="loadUnassignedJobs()">Refresh</button>
+<div id="jobContainer"></div>
 
 <script src="js/owner.js"></script>
