--- a/driver.html
+++ b/driver.html
@@ -8,6 +8,7 @@
 <body>
   <h2>Welcome Driver</h2>
   <p>These are the jobs assigned to you.</p>
+  <div id="driverJobs">Loading your jobs...</div>
   <button onclick="logout()">Logout</button>
   <script src="js/driver.js"></script>
 </body>
