--- a/driver.html
+++ b/driver.html
@@ -1,4 +1,3 @@
-<!-- driver html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,9 +6,16 @@
 </head>
 <body>
   <h2>Welcome Driver</h2>
-  <p>These are the jobs assigned to you.</p>
+  
+  <div id="dashboard-buttons">
+    <button id="assignedBtn">Assigned Jobs</button>
+    <button id="completedBtn">Completed Jobs</button>
+  </div>
+
   <div id="driverJobs">Loading your jobs...</div>
+
   <button onclick="logout()">Logout</button>
+
   <script src="js/driver.js"></script>
 </body>
 </html>
