--- a/driver.html
+++ b/driver.html
@@ -1,3 +1,4 @@
+<!-- driver html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,17 +6,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>Welcome Driver</h2>
-  
+  <h2>Driver Dashboard</h2>
   <div id="dashboard-buttons">
-    <button id="assignedBtn">Assigned Jobs</button>
-    <button id="completedBtn">Completed Jobs</button>
+    <button id="assignedJobsButton" onclick="showAssignedJobs()">Assigned Jobs</button>
+    <!-- Remove the "Completed Jobs" button here -->
   </div>
 
   <div id="driverJobs">Loading your jobs...</div>
-
+  
   <button onclick="logout()">Logout</button>
-
+  
   <script src="js/driver.js"></script>
 </body>
 </html>
