--- a/driver.html
+++ b/driver.html
@@ -1,16 +1,26 @@
-<!-- driver html -->
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Driver Dashboard</title>
+  <title>Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>Driver Dashboard</h2>
-  <div id="driverJobs">Loading your jobs...</div>
-  
-  <button onclick="logout()">Logout</button>
-  
-  <script src="js/driver.js"></script>
+  <h2>Driver Login</h2>
+  <div class="form-container">
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+    <p id="message" style="color: red;"></p>
+  </div>
+
+  <div class="form-container" id="newPasswordForm" style="display:none;">
+    <h3>Set New Password</h3>
+    <input type="password" id="newPassword" placeholder="New Password">
+    <button onclick="submitNewPassword()">Submit</button>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/amazon-cognito-identity-js@6.2.1/dist/amazon-cognito-identity.min.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
