--- a/login.html
+++ b/login.html
@@ -9,14 +9,16 @@
 </head>
 <body>
   <h2>Login</h2>
+  <div class="job-detail-box">
   <input id="email" type="email" placeholder="Email"><br><br>
   <input id="password" type="password" placeholder="Password"><br><br>
   <button onclick="login()">Login</button>
   <p id="message"></p>
 
-  <div id="newPasswordForm" style="display:none;">
-    <input id="newPassword" type="password" placeholder="New Password"><br><br>
-    <button onclick="submitNewPassword()">Submit New Password</button>
+    <div id="newPasswordForm" style="display:none;">
+      <input id="newPassword" type="password" placeholder="New Password"><br><br>
+      <button onclick="submitNewPassword()">Submit New Password</button>
+    </div>
   </div>
 
   <script src="js/login.js"></script>
