--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h2>Login</h2>
+  <div class="center-screen">
   <div class="job-detail-box">
   <input id="email" type="email" placeholder="Email"><br><br>
   <input id="password" type="password" placeholder="Password"><br><br>
@@ -19,6 +20,7 @@
       <input id="newPassword" type="password" placeholder="New Password"><br><br>
       <button onclick="submitNewPassword()">Submit New Password</button>
     </div>
+  </div>
   </div>
 
   <script src="js/login.js"></script>
