--- a/login.html
+++ b/login.html
@@ -1,4 +1,5 @@
 
+
 <!-- login html -->
 <!DOCTYPE html>
 <html>
@@ -9,7 +10,8 @@
 </head>
 <body>
   <h2>Login</h2>
-  <div class="login-wrapper">
+  <div class="center-screen">
+  <div class="job-detail-box">
   <input id="email" type="email" placeholder="Email"><br><br>
   <input id="password" type="password" placeholder="Password"><br><br>
   <button onclick="login()">Login</button>
@@ -19,6 +21,7 @@
       <input id="newPassword" type="password" placeholder="New Password"><br><br>
       <button onclick="submitNewPassword()">Submit New Password</button>
     </div>
+  </div>
   </div>
 
   <script src="js/login.js"></script>
