--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/amazon-cognito-identity-js@6.2.0/dist/amazon-cognito-identity.min.js"></script>
 </head>
 <body>
-  <h2>Login</h2>
+  <!--<h2>Login</h2>-->
   <div class="center-screen">
   <div class="job-detail-box">
   <input id="email" type="email" placeholder="Email"><br><br>
