--- a/owner.html
+++ b/owner.html
@@ -1,4 +1,4 @@
-<h2>Upload Job Excel</h2>
+<!--<h2>Upload Job Excel</h2>
 
 <input type="file" id="excelFile" accept=".xlsx,.xls">
 <button onclick="uploadExcel()">Upload Excel</button>
@@ -7,4 +7,19 @@
 <button onclick="loadUnassignedJobs()">Refresh</button>
 <div id="jobContainer"></div>
 
+<script src="js/owner.js"></script>-->
+
+<h2>Upload Job Excel</h2>
+
+<div class="job-card">
+  <input type="file" id="excelFile" accept=".xlsx,.xls">
+  <button onclick="uploadExcel()">Upload Excel</button>
+  <p id="uploadStatus"></p>
+</div>
+
+<h2>Unassigned Jobs</h2>
+<button onclick="loadUnassignedJobs()">Refresh</button>
+<div id="jobContainer"></div>
+
 <script src="js/owner.js"></script>
+
