--- a/owner.html
+++ b/owner.html
@@ -8,7 +8,7 @@
 <div id="jobContainer"></div>
 
 <script src="js/owner.js"></script>-->
-
+<!DOCTYPE html>
 <h2>Upload Job Excel</h2>
 
 <div class="job-card">
