--- a/owner.html
+++ b/owner.html
@@ -1,24 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Owner Dashboard</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="dashboard-container">
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <h3>Owner Dashboard</h3>
+      <button onclick="showSection('upload')">Upload Excel</button>
+      <button onclick="showSection('unassigned')">Unassigned Jobs</button>
+      <button onclick="showSection('assigned')">Assigned Jobs</button>
+      <button onclick="showSection('completed')">Completed Jobs</button>
+      <button onclick="showSection('failed')">Failed Jobs</button>
+    </div>
 
-<h2>Upload Job Excel</h2>
-<div class="job-card">
-  <input type="file" id="excelFile" accept=".xlsx,.xls">
-  <button onclick="uploadExcel()">Upload Excel</button>
-  <p id="uploadStatus"></p>
-</div>
+    <!-- Main content area -->
+    <div class="main-content">
+      <div id="uploadSection" class="section">
+        <h2>Upload Job Excel</h2>
+        <input type="file" id="excelFile" accept=".xlsx,.xls">
+        <button onclick="uploadExcel()">Upload Excel</button>
+        <p id="uploadStatus"></p>
+      </div>
 
-<h2>Unassigned Jobs</h2>
-<div class="job-card">
-  <button onclick="loadUnassignedJobs()">Refresh</button>
-</div>
-<div id="jobContainer"></div>
+      <div id="unassignedSection" class="section" style="display:none;">
+        <h2>Unassigned Jobs</h2>
+        <button onclick="loadUnassignedJobs()">Refresh</button>
+        <div id="jobContainer"></div>
+      </div>
 
-<script src="js/owner.js"></script>
+      <div id="assignedSection" class="section" style="display:none;">
+        <h2>Assigned Jobs</h2>
+        <p>Coming soon...</p>
+      </div>
+
+      <div id="completedSection" class="section" style="display:none;">
+        <h2>Completed Jobs</h2>
+        <p>Coming soon...</p>
+      </div>
+
+      <div id="failedSection" class="section" style="display:none;">
+        <h2>Failed Jobs</h2>
+        <p>Coming soon...</p>
+      </div>
+    </div>
+  </div>
+
+  <script src="js/owner.js"></script>
 </body>
-</html>
+
