--- a/owner.html
+++ b/owner.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Owner Dashboard</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="dashboard-container">
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <h3>Owner Dashboard</h3>
-      <button onclick="showSection('upload')">Upload Excel</button>
-      <button onclick="showSection('unassigned')">Unassigned Jobs</button>
-      <button onclick="showSection('assigned')">Assigned Jobs</button>
-      <button onclick="showSection('completed')">Completed Jobs</button>
-      <button onclick="showSection('failed')">Failed Jobs</button>
-    </div>
 
-    <!-- Main content area -->
-    <div class="main-content">
-      <div id="uploadSection" class="section">
-        <h2>Upload Job Excel</h2>
+<div class="dashboard-container">
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h3>Owner Panel</h3>
+    <button onclick="showSection('upload')"> Upload Excel</button>
+    <button onclick="showSection('unassigned')"> Unassigned Jobs</button>
+    <button onclick="showSection('assigned')"> Assigned Jobs</button>
+    <button onclick="showSection('completed')"> Completed Jobs</button>
+    <button onclick="showSection('failed')"> Failed Jobs</button>
+  </div>
+
+  <!-- Main content area -->
+  <div class="main-content">
+    <!-- Upload Excel -->
+    <div id="upload" class="section" style="display: block;">
+      <h2>Upload Job Excel</h2>
+      <div class="job-card">
         <input type="file" id="excelFile" accept=".xlsx,.xls">
         <button onclick="uploadExcel()">Upload Excel</button>
         <p id="uploadStatus"></p>
       </div>
+    </div>
 
-      <div id="unassignedSection" class="section" style="display:none;">
-        <h2>Unassigned Jobs</h2>
+    <!-- Unassigned Jobs -->
+    <div id="unassigned" class="section">
+      <h2>Unassigned Jobs</h2>
+      <div class="job-card">
         <button onclick="loadUnassignedJobs()">Refresh</button>
-        <div id="jobContainer"></div>
       </div>
+      <div id="jobContainer"></div>
+    </div>
 
-      <div id="assignedSection" class="section" style="display:none;">
-        <h2>Assigned Jobs</h2>
-        <p>Coming soon...</p>
-      </div>
+    <!-- Assigned Jobs -->
+    <div id="assigned" class="section">
+      <h2>Assigned Jobs</h2>
+      <p>Feature coming soon...</p>
+    </div>
 
-      <div id="completedSection" class="section" style="display:none;">
-        <h2>Completed Jobs</h2>
-        <p>Coming soon...</p>
-      </div>
+    <!-- Completed Jobs -->
+    <div id="completed" class="section">
+      <h2>Completed Jobs</h2>
+      <p>Feature coming soon...</p>
+    </div>
 
-      <div id="failedSection" class="section" style="display:none;">
-        <h2>Failed Jobs</h2>
-        <p>Coming soon...</p>
-      </div>
+    <!-- Failed Jobs -->
+    <div id="failed" class="section">
+      <h2>Failed Jobs</h2>
+      <p>Feature coming soon...</p>
     </div>
   </div>
+</div>
 
-  <script src="js/owner.js"></script>
+<script src="js/owner.js"></script>
+<script>
+  function showSection(id) {
+    document.querySelectorAll('.section').forEach(div => {
+      div.style.display = 'none';
+    });
+    document.getElementById(id).style.display = 'block';
+  }
+</script>
 </body>
-
+</html>
