--- a/owner.html
+++ b/owner.html
@@ -33,7 +33,7 @@
     <div id="unassigned" class="section">
       <h2>Unassigned Jobs</h2>
       <div class="job-card">
-        <button onclick="loadUnassignedJobs()">Refresh</button>
+        <!--<button onclick="loadUnassignedJobs()">Refresh</button>-->
       </div>
       <div id="jobContainer"></div>
     </div>
