--- a/owner.html
+++ b/owner.html
@@ -42,19 +42,19 @@
     <!-- Assigned Jobs -->
     <div id="assigned" class="section">
       <h2>Assigned Jobs</h2>
-      <p>Feature coming soon...</p>
+      <p>Loading assigned Jobs</p>
     </div>
 
     <!-- Completed Jobs -->
     <div id="completed" class="section">
       <h2>Completed Jobs</h2>
-      <p>Feature coming soon...</p>
+      <p>Loading completed Jobs</p>
     </div>
 
     <!-- Failed Jobs -->
     <div id="failed" class="section">
       <h2>Failed Jobs</h2>
-      <p>Feature coming soon...</p>
+      <p>Loading Failed Jobs</p>
     </div>
   </div>
 </div>
