--- a/owner.html
+++ b/owner.html
@@ -43,7 +43,7 @@
     <div id="assigned" class="section">
       <h2>Assigned Jobs</h2>
       <p>Loading assigned Jobs</p>
-      <button onclick="showSection('assigned'); loadAssignedJobs()"> Assigned Jobs</button>
+      <button onclick="loadAssignedJobs()"> Refresh</button>
     </div>
 
     <!-- Completed Jobs -->
