--- a/owner.html
+++ b/owner.html
@@ -42,7 +42,10 @@
     <!-- Assigned Jobs -->
     <div id="assigned" class="section">
       <h2>Assigned Jobs</h2>
+      <div class="job-card">
       <button onclick="loadAssignedJobs()"> Refresh</button>
+      </div>
+      <div id="jobContainer"></div>
     </div>
 
     <!-- Completed Jobs -->
