--- a/owner.html
+++ b/owner.html
@@ -45,7 +45,7 @@
       <div class="job-card">
       <button onclick="loadAssignedJobs()"> Refresh</button>
       </div>
-      <div id="jobContainer"></div>
+      <div id="assignedJobContainer"></div>
     </div>
 
     <!-- Completed Jobs -->
