--- a/owner.html
+++ b/owner.html
@@ -5,6 +5,12 @@
   <title>Owner Dashboard</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+<div id="photoModal" class="modal" style="display:none;">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closePhotoModal()">&times;</span>
+    <div id="photoContainer"></div>
+  </div>
+</div>
 <body>
 
 <div class="dashboard-container">
