--- a/owner.html
+++ b/owner.html
@@ -55,10 +55,12 @@
     </div>
 
     <!-- Completed Jobs -->
+    <!-- Completed Jobs -->
     <div id="completed" class="section">
       <h2>Completed Jobs</h2>
-      <p>Loading completed Jobs</p>
+      <div id="completedJobContainer"></div>
     </div>
+
 
     <!-- Failed Jobs -->
     <div id="failed" class="section">
