--- a/owner.html
+++ b/owner.html
@@ -21,7 +21,7 @@
     <button onclick="showSection('upload')"> Upload Excel</button>
     <button onclick="showSection('unassigned')"> Unassigned Jobs</button>
     <button onclick="showSection('assigned')"> Assigned Jobs</button>
-    <button onclick="showSection('completed')"> Completed Jobs</button>
+    <button onclick="showSection('completed'); loadCompletedJobs()">Completed Jobs</button>
     <button onclick="showSection('failed')"> Failed Jobs</button>
   </div>
 
